--- a/gallery.html
+++ b/gallery.html
@@ -4,14 +4,16 @@
         <meta charset="utf-8"/>
         <title>The Pittsburgh Steelers Gallery</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
         <div class="header">The Pittsburgh Steelers Gallery</div>
         <div class=navbar>
-             <a href="index.html">Home</a>
-             <a href="about.html">About the Steelers</a>
-             <a href="gallery.html">The Steelers Gallery</a>
+             <a class="pagelink" href="index.html">Home</a>
+             <a class="pagelink" href="about.html">About the Steelers</a>
+             <a class="pagelink" href="gallery.html">The Steelers Gallery</a>
         </div>
+        <div class="main">
         <div class="gallery">
             <div class="thumbnail">
                 <img class="thumbnail-image" src="">
@@ -26,6 +28,7 @@
                 <img class="thumbnail-image" src="">
             </div>
         </div>
+        </div>
         <div class="footer">
             <div class="social">
                 <a href="https://www.facebook.com/steelers/">
@@ -39,7 +42,7 @@
                 </a>
             </div>
             <div>
-                <p>Copyright 2018 &copy</p>
+                <p>Copyright 2018 &copy Samuel Maturo</p>
             </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
