--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
         <meta charset="utf-8"/>
         <title>The Pittsburgh Steelers</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
         <div class="header">The Pittsburgh Steelers</div>
         <div class=navbar>
-             <a href="index.html">Home</a>
-             <a href="about.html">About the Steelers</a>
-             <a href="gallery.html">The Steelers Gallery</a>
+             <a class="pagelink" href="index.html">Home</a>
+             <a class="pagelink" href="about.html">About the Steelers</a>
+             <a class="pagelink" href="gallery.html">The Steelers Gallery</a>
         </div>
         <div class="main">
+            <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Pittsburgh_Steelers_logo.svg/150px-Pittsburgh_Steelers_logo.svg.png">
+            <p>The Pittsburgh Steelers are a professional National Football League team. They are in the National Football Conference, North Division, 
+            along with the Cinncinati Bengals, Baltimore Ravens, and Cleveland Browns. They have won six Super Bowls, IX, X, XIII, XIV, XL, and XLIII.
+            They are the only team to have won six super bowls. They have made the playoffs 31 times, won their division 23 times, and won their conference eight times.</p>
+        <div class="menu">
         </div>
-        <div class="content">
         </div>
         <div class="footer">
             <div class="social">
@@ -29,9 +34,8 @@
                 </a>
             </div>
             <div>
-                <p>Copyright 2018 &copy</p>
+                <p>Copyright 2018 &copy Samuel Maturo</p>
             </div>
-        </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
     </body>
