--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,7 @@
         </div>
         <div class="footer">
             <div class="social">
+                <p>The Steelers Links -></p>
                 <a href="https://www.facebook.com/steelers/">
                     <img class="social-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png">
                 </a>
@@ -42,7 +43,7 @@
                 </a>
             </div>
             <div>
-                <p>Copyright 2018 &copy Samuel Maturo</p>
+                <p id="copyright">Copyright 2018 &copy Samuel Maturo</p>
             </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
