--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         </div>
         <div class="main">
             <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Pittsburgh_Steelers_logo.svg/150px-Pittsburgh_Steelers_logo.svg.png">
-            <p>The Pittsburgh Steelers are a professional National Football League team. They are in the National Football Conference, North Division, 
-            along with the Cinncinati Bengals, Baltimore Ravens, and Cleveland Browns. They have won six Super Bowls, IX, X, XIII, XIV, XL, and XLIII.
-            They are the only team to have won six super bowls. They have made the playoffs 31 times, won their division 23 times, and won their conference eight times.</p>
+            <p>Hello! This page is dedicated to my favorite football team, the Steelers. Be sure to check out the links at the top! "About the Steelers" is information and a brief history of the Steelers. 
+            "The Steelers Gallery" has some of my favorite Steeler images.</p>
         <div class="menu">
         </div>
         </div>
         <div class="footer">
             <div class="social">
+                <p>The Steelers Links -></p>
                 <a href="https://www.facebook.com/steelers/">
                     <img class="social-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png">
                 </a>
@@ -34,7 +34,7 @@
                 </a>
             </div>
             <div>
-                <p>Copyright 2018 &copy Samuel Maturo</p>
+                <p id="copyright">Copyright 2018 &copy Samuel Maturo</p>
             </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
