--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@
             along with the Cinncinati Bengals, Baltimore Ravens, and Cleveland Browns. They have won six Super Bowls, IX, X, XIII, XIV, XL, and XLIII.
             They are the only team to have won six super bowls. They have made the playoffs 31 times, won their division 23 times, and won their conference eight times.
             They were founded in 1933 and owned at that time by Art Rooney. They joined the NFL as the Pittsburgh Pirates, but changed to the Steelers prior to the 1940 season.
-            </p>
+            For the 1943 season during World War II, the Steelers and the Eagles merged to become the Steagles. This team took the best players from the Steelers and Eagles and put them in one team.
+            Now, the Steelers compete for the division title every year.</p>            
         </div>
         <div class="menu">
         </div>
         <div class="footer">
             <div class="social">
-            <p>The Steelers Links -></p>
                 <a href="https://www.facebook.com/steelers/">
                     <img class="social-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png">
                 </a>
